--- a/app.html
+++ b/app.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta charset='utf-8'>
-  <style id='appstyle'></style>
+  <title>CyBy-Draw</title>
+  <meta charset="utf-8">
+  <style id="appstyle"></style>
   <link rel="stylesheet" type="text/css" href="css/cyby-draw.css">
  </head>
- <body id='content'>
-  <div id='app_sketcher_div'></div>
-  <div id='messages'></div>
-  <script type='text/javascript' src='app/build/exec/cyby-draw-app.js'></script>
+ <body id="content">
+  <div id="app_sketcher_div"></div>
+  <div id="messages"></div>
+  <script type="text/javascript" src="app/build/exec/cyby-draw-app.js"></script>
  </body>
 </html>
