[ lint ] use hyphens for dom IDs (#44)

--- a/word-addin.html
+++ b/word-addin.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/cyby-draw-word-addin.css">
  </head>
  <body id="content">
-  <div id="app_sketcher_div"></div>
+  <div id="app-sketcher-div"></div>
   <div id="messages"></div>
   <script type="text/javascript" src="word-addin/build/exec/cyby-draw-word-addin.js"></script>
  </body>
