--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/cyby-draw.css">
  </head>
  <body id="content">
-  <div id="app_sketcher_div"></div>
+  <div id="app-sketcher-div"></div>
   <div id="messages"></div>
   <script type="text/javascript" src="app/build/exec/cyby-draw-app.js"></script>
  </body>
